# crossbridge

./: .gitignore  .road_map.swp  .~lock.front_doc.csv#  README.md  current_plan.md  front_doc.csv  road_map  task.md
crossbridge_frontend/frontend/: Cargo.toml  index.html  ttttt
crossbridge_frontend/frontend/src/: app.rs  bridge.rs  main.rs  status.rs  try.rs  wallet.rs
crossbridge_frontend/frontend/src/models/: mod.rs  state.rs
frontend/: Cargo.toml  index.html
frontend/src/: app.rs  bridge.rs  lib.rs  main.rs  status.rs  wallet.rs
relayer/relayer-bot/: .env  .relayer.key  Cargo.toml  processed_sigs.txt  ttt
relayer/relayer-bot/base_abi/: CWSol.json
relayer/relayer-bot/src/: base_minters.rs  burn_tracker.rs  ethereum_listener.rs  ethereum_minter.rs  fetch_tx_and_block_header.rs  justatry.rs  lib.rs  main.rs  merkle.rs  merkle_validator.rs  solana_listener.rs  solana_state_client.rs  solana_unlocker.rs  task.md  test_ethereum_listiners  test_merkle.rs  try.rs  utils.rs  verify_merkle_proof.rs  zcash_design.md  zcash_privacy.rs  zcash_privacy_play.rs  zcash_separate_flow.md
relayer/relayer-bot/zk-prover/lib/: Cargo.toml
relayer/relayer-bot/zk-prover/lib/src/: lib.rs
relayer/relayer-bot/zk-prover/program/: Cargo.toml
relayer/relayer-bot/zk-prover/program/src/: main.rs  try.rs
relayer/relayer-bot/~/.vscode-root/: .org.chromium.Chromium.m0jnvJ  Network Persistent State  TransportSecurity  machineid
relayer/relayer-bot/~/.vscode-root/Cache/Cache_Data/: 0132d9136ff78deb_0  034e05741e9f9f47_0  164fef681e689a3a_0  28873823cc92337b_0  3585a92e3c600860_0  35d63f3d76b3626e_0  3d6958163e73e3f9_0  5283edf90cf4ab50_0  56a6e0295818d542_0  5a88f22e18719d40_0  5c04010244105f8f_0  5c83e318f0697c0c_0  5f13ade1e15855d7_0  64599076fdeb56ce_0  727ea205dd7c0d9e_0  72cf2956e3bb03f1_0  7f1ad9744f2039fe_0  876a063c7ced6343_0  9534f87867ef5454_0  9553f3b6ef594d2f_0  9f50bddbd978eddd_0  aa6f92133a207bc0_0  b8658e1594aaaf47_0  d121e2a6335b7510_0  d4819508f250c1ce_0  ea164e56ec64101c_0  eaf8f7695d208af0_0  eea621eb46923164_0  f577884aaa01c474_0
relayer/relayer-bot/~/.vscode-root/Cache/Cache_Data/index-dir/: the-real-index
relayer/relayer-bot/~/.vscode-root/CachedData/7c6fdfb0b8f2f675eb0b47f3d95eeca78962565b/chrome/js/: 5ffc9b8837f2b807_0  91cb6b9d23d5a62a_0  f53c0888c292bb16_0
relayer/relayer-bot/~/.vscode-root/CachedData/7c6fdfb0b8f2f675eb0b47f3d95eeca78962565b/chrome/js/index-dir/: the-real-index
relayer/relayer-bot/~/.vscode-root/CachedData/7c6fdfb0b8f2f675eb0b47f3d95eeca78962565b/chrome/wasm/index-dir/: the-real-index
relayer/relayer-bot/~/.vscode-root/CachedProfilesData/__default__profile__/: extensions.builtin.cache  extensions.user.cache
relayer/relayer-bot/~/.vscode-root/Code Cache/wasm/index-dir/: the-real-index
relayer/relayer-bot/~/.vscode-root/Crashpad/: client_id
relayer/relayer-bot/~/.vscode-root/Crashpad/pending/: bd45eb5d-7b43-4924-80fa-6ba316f304ad.dmp
relayer/relayer-bot/~/.vscode-root/DawnGraphiteCache/: data_1  index
relayer/relayer-bot/~/.vscode-root/DawnWebGPUCache/: data_1  index
relayer/relayer-bot/~/.vscode-root/GPUCache/: data_0  data_1  data_2  index
relayer/relayer-bot/~/.vscode-root/Local Storage/leveldb/: LOG
relayer/relayer-bot/~/.vscode-root/Shared Dictionary/cache/index-dir/: the-real-index
relayer/relayer-bot/~/.vscode-root/User/globalStorage/: state.vscdb  storage.json
relayer/relayer-bot/~/.vscode-root/User/workspaceStorage/1744875300897/: state.vscdb
smart_contracts/: deployed_contract_id  hardhat.config.ts  package-lock.json  package.json
smart_contracts/contracts/CWSol/: CWSol.sol
smart_contracts/contracts/wSol/: WSol.sol
smart_contracts/scripts/: deploy-wSol.ts  deploy.ts
smart_contracts/test/: Lock.ts
solana/bridge-program/: Anchor.toml  Cargo.toml  command_to_run_for_feature_upgrade.md  package-lock.json  package.json  rust-toolchain.toml
solana/bridge-program/programs/bridge-program/: Cargo.toml
solana/bridge-program/programs/bridge-program/src/: errors.rs  lib.rs  test.md  test.rs
solana/bridge-program/programs/bridge-program/src/events/: lock_event.rs  mod.rs  unlock_event.rs
solana/bridge-program/programs/bridge-program/src/instructions/: collect_fees.rs  get_bridge_balance.rs  get_user_balance.rs  initialize.rs  lock_sol.rs  mod.rs  unlock_sol.rs  update_relayer.rs
solana/bridge-program/programs/bridge-program/src/records/: bridge_accounts.rs  mod.rs  user_balance.rs
solana/bridge-program/tests/: bridge-program.rs  bridge-program.ts  bridge_program_test.rs
