[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.0", features = ["csr"] }
log = "0.4"  
wasm-bindgen = "0.2"  
js-sys = "0.3.77"


solana-sdk = "1.18.5"  
getrandom = { version = "0.3", features = ["wasm_js"] }



[target.'cfg(target_arch = "wasm32")'.dependencies]
solana-client-wasm = "1.18.0"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
solana-program = "1.18.0"

[target.wasm32-unknown-unknown]
rustflags = ['--cfg', 'getrandom_backend="wasm_js"']