[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.0", features = ["csr"] }
log = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3.77"
getrandom = { version = "0.2", features = ["js"] }
bincode = "1.3"


# Unified Solana versions (must match exactly)
solana-sdk = "1.18.0"
solana-program = "1.18.0"

base64 = "0.22.1"
solana-client = "1.18.0"  
wasm-bindgen-futures = "0.4.50"

[target.'cfg(target_arch = "wasm32")'.dependencies]
solana-client-wasm = "1.18.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]  
solana-program = "1.18.0"



[package.metadata.trunk]
wasm-opt = ["-Oz"] 



