[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.0", features = ["csr"] }
log = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3.77"
bincode = "1.3"
base64 = "0.22.1"
wasm-bindgen-futures = "0.4.50"
# Force specific version of getrandom with correct features
rand = "0.8.5"
getrandom = { version = "0.2.10", features = ["js"] }

# Unified Solana versions (must match exactly)
solana-sdk = { version = "1.18.0", features = ["program"], default-features = false }
solana-program = { version = "1.18.0", default-features = false }
solana-client = { version = "1.18.0", default-features = false }

[build-dependencies]
wasm-bindgen-cli = "0.2.92"

[target.'cfg(target_arch = "wasm32")'.dependencies]
solana-client-wasm = "1.18.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
solana-program = "1.18.0"

[package.metadata.trunk]
wasm-opt = ["-Oz"]