[package]
name = "relayer-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
anchor-client = "0.27.0"
ethers = { version = "0.6", features = ["abigen", "ws", "contract", "signer"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
solana-sdk = "1.11"
solana-client = "1.11"
tokio-tungstenite = "0.15"
web3 = "0.15.0"