[package]
name = "relayer-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anchor-client = "0.30.0"  # Changed from 0.27.0
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
solana-sdk = "1.11"
solana-client = "1.11"
tokio-tungstenite = { version = "0.20", features = ["tokio-native-tls"] }
web3 = "0.19.0"
futures = "0.3"
secp256k1 = "0.27"
hex = "0.4"
solana-transaction-status = "1.11"
base64 = "0.22.1" 
borsh = { version = "1.5", features = ["derive"]}
anchor-lang = { version = "0.30", features = ["derive"] }
chrono = "0.4.41"
sha3 = "0.10.8"
dotenv = "0.15"
jsonrpsee = { version = "0.21", features = ["http-client"] }
tiny-keccak = "2.0.2"
some_crate = "0.2.1"
bs58 = "0.5.1"
sha2 = "0.10"
merkle_light = "0.4.0"
rs_merkle = "1.5.0"

