[package]
name = "bridge-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bridge_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-client = { version = "0.31.0", features = ["async"] }
anyhow = "1.0.93"
tokio = { version = "1.0", features = ["full"] }
#bridge-program = { path = "../../programs/bridge-program" }
