[package]
name = "bridge-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bridge_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]



[dependencies]
anchor-lang = "0.30.0"
anchor-client = { version = "0.30.0", features = ["async"] }
anyhow = "1.0.93"
tokio = { version = "1.0", features = ["full"] }
litemap = { version = "=0.7.4" }
zerofrom = { version = "=0.1.5" }
getrandom = "0.3"

#bridge-program = { path = "../../programs/bridge-program" }
