[package]
name = "bridge_program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bridge_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]



[dependencies]
#anchor-lang = "0.29.0"
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }


